<resources>
    <string name="app_name">MoviesManager</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="_2011">2011</string>
    <string name="producer">Producer</string>
    <string name="duration">Duration</string>
    <string name="launch">Launch</string>
    <string name="save">Save</string>
    <string name="ranking">Ranking</string>
    <string name="add_movie">Add Movie</string>
    <string name="watched">Watched:</string>
    <string name="gender">Gender</string>
    <string name="sort">Sort</string>
</resources>